# crosstalk-mcp

./: .gitignore  LICENSE  README.md
.github/workflows/: build-java.yml  ci-python.yml  release.yml
docs/: FEATURES-PLAN.md
java/: .dockerignore  Dockerfile  README.md  pom.xml
java/src/main/java/io/crosstalk/: MessageStore.java  RelayApplication.java  RelayAuthConfig.java  RelayController.java  RelayTools.java
java/src/main/resources/: application.properties
python/: .dockerignore  Dockerfile  README.md  crosstalk_mcp.py  pyproject.toml  requirements.txt  ui.html
tests/: conftest.py  test_relay.py
