[project]
name = "crosstalk-mcp"
version = "1.0.0"
description = "A tiny cross-machine relay MCP server: a shared mailbox so coding agents on different machines can message each other."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.9.0",
    "uvicorn>=0.30",
]

[project.scripts]
crosstalk-mcp = "crosstalk_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["crosstalk_mcp.py"]
